# kaggle-psp

./: .gitignore  README.md  pyproject.toml
src/: create_features.py  run.py
src/conf/: config.yaml
src/conf/model/: xgboost.yaml
src/model/: model_base.py  model_gbdt.py  runner.py
src/preprocessing/: consts.py  features.py
