[tool.poetry]
name = "kaggle-psp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kaggle_psp"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
polars = "^0.18.8"
ipykernel = "^6.24.0"
jupyter = "^1.0.0"
xgboost = "^1.7.6"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
hydra-core = "^1.3.2"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
